# hansoldeco3

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  result.csv
src/: DA_cause.ipynb  DA_missingvalue.ipynb  DA_sampling.ipynb  DA_target.ipynb  EDA.ipynb  [Baseline]_RAG를_활용한_건설_사고_예방_및_대응책_생성.ipynb  baseline_RAG_pdf.ipynb  baseline_copy_for_refactoring.ipynb  configs.py  inference.py  preprocess.py  sample_test.ipynb  vllm_test.ipynb  wrap.py
src/configs/: __init__.py  basic.py  env.py  exp.py
src/configs/exp/: __init__.py  builder.py  exp_0.py  exp_1.py  exp_2.py  exp_3.py  exp_4.py  exp_base.py
src/configs/experiments/: __init__.py  exp_0.py  exp_1.py  exp_2.py  exp_3.py  exp_4.py
src/core/: LLM.py  __init__.py  chain_selector.py
src/core/chain/: __init__.py  base.py  baseline.py  dual.py  manual.py
src/data_analysis/: association_pruning.py
src/data_engineering/: RAG.py  path_manager.py
src/data_engineering/RAG/: __init__.py  builder.py  splitter.py
src/data_engineering/RAG/chunking/: __init__.py
src/data_engineering/RAG/vector_store/: FAISS.py  __init__.py  base.py
src/data_engineering/dataset/guideline/: __init__,py  lfs_dataset.py
src/data_engineering/dataset/precendent/: __init__.py  base.py  csv_dataset.py  data_pipeline.py
src/data_engineering/dataset/precendent/preprocess/: cleaning.py
src/data_engineering/path/: lock.py  manage.py
src/data_engineering/prompt_engineering/: LLM_template.py  precendent_to_docs.py  precendent_to_question.py  question.py
src/model/: LLM.py  langchain_utils.py
src/wrapup/: evaluation.py  submit.py
